Checkpoint changes; query code is working; have only tested EXPAND_CONFIG indexer step, so more work is needed.